# single-chain-xujin-orchestrator

./: .gitignore  LICENSE  MIGRATION.md  PROJECT_SUMMARY.md  README.md  USAGE.md  global_config.json  pyproject.toml  requirements.txt  start.command  start.common  start.sh  xujin
docs/: 存量工作流填充说明.md  开放使用文档.md  需求说明书.md
src/xujin_workflow/: __init__.py  __main__.py  content_generator.py  engine.py  engine_state.py  executor.py  gate.py  logger.py  skill_builder.py  utils.py  validator.py  webui.py  workflow.py
src/xujin_workflow/templates/: index.html  skill_template_full.j2  skill_template_inline.j2
